file operations: fix double unref and show invalid filename error dialog

Remove a superflous g_object_unref() call plus show error dialog when
creating a new file with an invalid file name for the destination
file system.

Fixes bug 706131

https://bugzilla.gnome.org/show_bug.cgi?id=706131